stability for composer.json

--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,6 @@
             "email": "trig.github@yandex.ru"
         }
     ],
-    "require": {}
+    "require": {},
+    "minimum-stability": "stable"
 }
